--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= image_tag post.featured_image.url(:thumb) %></td>
         <td><%= post.title %></td>
-        <td><%= post.description %></td>
+        <td><%= post.description.html_safe %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
