--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,10 +17,10 @@
       <tr>
         <td><%= image_tag post.featured_image.variant(resize: "250x250") %></td>
         <td><%= post.title %></td>
-        <td><%= post.description.html_safe %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= post.description %></td>
+        <td><%= link_to 'Show', [@organization,post]%> </td> 
+        <td><%= link_to 'Edit', edit_organization_post_path(@organization,post) %></td> 
+        <td><%= link_to 'Destroy', [@organization,post], method: :delete, data: { confirm: 'Are you sure?' }%></td> 
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_organization_post_path(@organization) %>
