--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Post</h1>
 
-<%= render 'form', post: @post %>
+<%= render 'form', organization: @organization, post: @post %>
 
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', organization_posts_path(@organization) %> 
