--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,5 @@
   <%= @post.description.html_safe %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Edit', edit_organization_post_path(@organization,@post) %> |
+<%= link_to 'Back', organization_posts_path(@organization) %>
